--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,7 @@
-name: Lint
+name: Test
 on: [push, pull_request]
 concurrency:
-  group: py-lint-${{ github.ref }}
+  group: py-test-${{ github.ref }}
   cancel-in-progress: true
 jobs:
   test:
@@ -17,5 +17,5 @@ jobs:
           python-version: ${{ matrix.python-version }}
       - name: Install tox
         run: pip install tox
-      - name: Run linting
-        run: tox -e lint
+      - name: Run tests
+        run: tox -e test
