--- a/tox.ini
+++ b/tox.ini
@@ -4,10 +4,13 @@ test_dir = tests
 
 [flake8]
 max-line-length = 160
+exclude = .venv,.git,tests/galaxy.git,.tox
 
 [testenv]
 commands =
   lint: flake8
+  test: pytest tests
 
 deps = 
   lint: flake8
+  test: pytest
