Fix state_dir handling

--- a/tox.ini
+++ b/tox.ini
@@ -9,8 +9,9 @@ exclude = .venv,.git,tests/galaxy.git,.tox
 [testenv]
 commands =
   lint: flake8
-  test: pytest tests
+  test: coverage run -m pytest
 
 deps = 
   lint: flake8
+  test: coverage
   test: pytest
