Expose workers, timeout, and extra_args for gunicorn

--- a/tox.ini
+++ b/tox.ini
@@ -9,7 +9,7 @@ exclude = .venv,.git,tests/galaxy.git,.tox
 [testenv]
 commands =
   lint: flake8
-  test: coverage run -m pytest
+  test: coverage run -m pytest -v
 
 deps = 
   lint: flake8
