Fix coverage reporting

--- a/tox.ini
+++ b/tox.ini
@@ -9,9 +9,9 @@ exclude = .venv,.git,tests/galaxy.git,.tox
 [testenv]
 commands =
   lint: flake8
-  test: coverage run -m pytest -v
-
+  test: coverage run -m pytest {posargs:-vv}
+  test: coverage xml
 deps = 
   lint: flake8
-  test: coverage
   test: pytest
+  test: coverage
