Test 'real' galaxyctl start

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,4 +2,4 @@
 line-length = 160
 
 [tool.pytest.ini_options]
-norecursedirs = "tests/galaxy.git/*"
+norecursedirs = "tests/galaxy.git/* tests/galaxy_venv"
