--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,7 @@ test_dir = tests
 
 [flake8]
 max-line-length = 160
-exclude = .venv,.git,tests/galaxy.git,.tox
+exclude = .venv,.git,tests/galaxy.git,.tox,tests/galaxy_venv
 
 [testenv]
 commands =
