--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -15,6 +15,8 @@ jobs:
       - uses: actions/setup-python@v2
         with:
           python-version: ${{ matrix.python-version }}
+      - name: Precreate virtualenv
+        run: python -m venv tests/galaxy_venv
       - name: Install tox
         run: pip install tox
       - name: Run tests
