--- a/tox.ini
+++ b/tox.ini
@@ -18,3 +18,6 @@ deps =
   test: requests
 passenv =
   GRAVITY_TEST_GALAXY_BRANCH
+  GRAVITY_SYSTEMCTL_EXTRA_ARGS
+  DBUS_SESSION_BUS_ADDRESS
+  XDG_RUNTIME_DIR
