--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -11,11 +11,12 @@ jobs:
       fail-fast: false
       matrix:
         python-version: ['3.7', '3.10']
-        galaxy-branch: ['release_22.01', 'dev']
-        exclude:
-          # this results in lengthy and expensive numpy wheel builds
-          - python-version: '3.10'
-            galaxy-branch: 'release_22.01'
+        galaxy-branch: ["pydantic_v2"]
+        # galaxy-branch: ['release_22.01', 'dev']
+        # exclude:
+        #   # this results in lengthy and expensive numpy wheel builds
+        #   - python-version: '3.10'
+        #     galaxy-branch: 'release_22.01'
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v2
