--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -13,9 +13,10 @@ jobs:
         python-version: ['3.9', '3.13']
         galaxy-branch: ['release_23.0', 'dev']
         exclude:
-          # this results in lengthy and expensive numpy wheel builds
-          - python-version: '3.10'
-            galaxy-branch: 'release_22.01'
+          # either the release existed before the python release or some expensive-to-build wheels (e.g. numpy) don't
+          # exist for the pinned package version / python version combo
+          - python-version: '3.13'
+            galaxy-branch: 'release_23.0'
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
