Fix type annotations

--- a/tox.ini
+++ b/tox.ini
@@ -2,17 +2,17 @@
 source_dir = gravity
 test_dir = tests
 
-[flake8]
-max-line-length = 160
-exclude = .venv,.git,tests/galaxy.git,.tox,tests/galaxy_venv
-
 [testenv]
 commands =
   lint: flake8
+  mypy: mypy .
   test: coverage run -m pytest {posargs:-vv}
   test: coverage xml
 deps = 
   lint: flake8
+  mypy: mypy
+  mypy: types-pyyaml
+  mypy: types-requests
   test: pytest
   test: pytest-timeout
   test: coverage
