--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -19,3 +19,5 @@ jobs:
         run: pip install tox
       - name: Run linting
         run: tox -e lint
+      - name: Run mypy
+        run: tox -e mypy
