--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -6,17 +6,17 @@ concurrency:
 jobs:
   test:
     name: Test
-    runs-on: ubuntu-22.04
+    runs-on: ubuntu-latest
     strategy:
       fail-fast: false
       matrix:
         python-version: ['3.9', '3.14']
-        galaxy-branch: ['release_23.0', 'dev']
+        galaxy-branch: ['release_24.0', 'dev']
         exclude:
           # either the release existed before the python release or some expensive-to-build wheels (e.g. numpy) don't
           # exist for the pinned package version / python version combo
           - python-version: '3.14'
-            galaxy-branch: 'release_23.0'
+            galaxy-branch: 'release_24.0'
     steps:
       - uses: actions/checkout@v6
       - uses: actions/setup-python@v6
